# function_calling

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt
notebooks/: explore.ipynb  ids_2023.txt
notebooks/structured_outputs/: custom_object_validation_01.ipynb  git_command.ipynb
workout_agent/: create_tables.py  training_tool_use.ipynb
